# kingfield-wifi-captive

./: .dockerignore  .env.example  .gitignore  PROJECT_BRIEF.yml  README.md  manage.py  pyproject.toml  railpack.json  tasks.py
docs/: dokploy-deployment.md  google-sheets-integration.md  live-commissioning-checklist.md  oc200-connectivity.md  omada-setup.md
portal/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
portal/management/commands/: purge_old_sessions.py  resend_google_sheets_failed.py
portal/migrations/: 0001_initial.py  0002_guestwifisession_google_sheets_error_and_more.py  0003_portalcustomization.py  0004_admin_managed_portal_customization.py
portal/services/: google_sheets.py  omada.py
static/portal/css/: main.css
templates/: base.html
templates/portal/: error.html  portal.html  privacy.html  success.html  terms.html
tests/: test_final_hardening.py  test_google_sheets.py  test_hotel_ready.py  test_omada.py  test_portal_flow.py
wifi_portal/: asgi.py  settings.py  urls.py  wsgi.py
